--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
   text-align: center;
+  height: 100vh;
+  display:grid;
+  grid-template-rows: .1fr 1fr .1fr;
+  grid-template-areas: 
+  'header header header'
+  'main main main'
+  'footer footer footer';
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.header {
+  border: 1px solid black;
+  grid-area: header;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main{
+  border:1px solid black;
+  width: 80%;
+  margin:0 auto;
+  grid-area: main;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer {
+  border: 1px solid black;
+  grid-area: footer;
 }
