--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,10 @@
   display:grid;
   grid-template-rows: .1fr 1fr .1fr;
   grid-template-areas: 
-  'header header header'
-  'main main main'
-  'footer footer footer';
+  'header'
+  'main '
+  'footer ';
+  row-gap:1rem;
 }
 
 
