--- a/src/styles/WorkExp.css
+++ b/src/styles/WorkExp.css
@@ -7,10 +7,12 @@
 
 .job-section-title {
     border-bottom: 1px solid black;
+    display:flex;
 }
 
 .job-section-title h4 {
     margin-bottom: .2rem;
+    margin-right: .5rem;
 }
 
 .jobs {
