--- a/src/styles/WorkExp.css
+++ b/src/styles/WorkExp.css
@@ -20,3 +20,25 @@
     flex-flow: row nowrap;
     margin-left: 2rem;
 }
+
+.job-form-container {
+    position: absolute;
+    border: 1px solid black;
+    background-color: grey;
+    border-radius: 10px;
+    top: 50%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+
+}
+
+.job-form {
+    display: flex;
+    flex-flow: column nowrap;
+    padding: 1.5rem;
+}
+
+.job-form>input {
+    margin-top: .2rem;
+    margin-bottom: 1rem;
+}
