--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,18 @@
 
 .header {
   border: 1px solid black;
-  text-align: center;
+  /* text-align: center; */
   grid-area: header;
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas: '. title editToggle';
+}
+
+header h1{
+  grid-area:title;
+  justify-self: center;
+  
+
 }
 
 .main{
@@ -28,3 +38,84 @@
   text-align: center;
   grid-area: footer;
 }
+
+
+
+
+/* toggle slider */
+
+.toggle-edit-container{
+  grid-area:editToggle;
+  align-self: center;
+  justify-self: center;
+}
+.toggle-edit-container p {
+  text-align: center;
+  margin: 0;
+}
+
+ /* The switch - the box around the slider */
+ .switch {
+   
+   position: relative;
+   display: inline-block;
+   width: 60px;
+   height: 34px;
+   /* justify-self: center;
+   align-self: center; */
+ }
+
+ /* Hide default HTML checkbox */
+ .switch input {
+   opacity: 0;
+   width: 0;
+   height: 0;
+ }
+
+ /* The slider */
+ .slider {
+   position: absolute;
+   cursor: pointer;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background-color: #ccc;
+   -webkit-transition: .4s;
+   transition: .4s;
+ }
+
+ .slider:before {
+   position: absolute;
+   content: "";
+   height: 26px;
+   width: 26px;
+   left: 4px;
+   bottom: 4px;
+   background-color: white;
+   -webkit-transition: .4s;
+   transition: .4s;
+ }
+
+ input:checked+.slider {
+   background-color: #2196F3;
+ }
+
+ input:focus+.slider {
+   box-shadow: 0 0 1px #2196F3;
+ }
+
+ input:checked+.slider:before {
+   -webkit-transform: translateX(26px);
+   -ms-transform: translateX(26px);
+   transform: translateX(26px);
+ }
+
+ /* Rounded sliders */
+ .slider.round {
+   border-radius: 34px;
+ }
+
+ .slider.round:before {
+   border-radius: 50%;
+ }
