--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -6,13 +6,21 @@
 }
 
 .school-section-title{
-    border-bottom: 1px solid black;
     display:flex;
+    align-items: center;
 }
 
 .school-section-title h4{
-    margin-bottom:.2rem;
+    margin:0;
+    border-bottom: 1px solid black;
+    margin-top:1rem;
+    margin-bottom:2px;
     margin-right: .5rem;
+}
+
+.school-section-title p {
+    margin:0;
+    cursor: pointer;
 }
 
 .schools{
